# SolverLES

./: .clang-format  .cmake-format.yaml  .fprettify.yml  .fprettifyrc  .gitignore  CMakeLists.txt  LICENSE  README.md  project_overview.md
.github/workflows/: docs.yml  linux.yml  style.yml
cmake/: AddPlugins.cmake  CompileOptions.cmake  FetchCGNS.cmake  FetchCatch2.cmake  FetchHDF5.cmake  FetchOpenBLAS.cmake  FetchPETSc.cmake  FetchUtils.cmake  FetchYamlCpp.cmake  PrefetchDependencies.cmake  Testing.cmake
docs/: CMakeLists.txt  Doxyfile.in  README.md  conf.py  index.rst  requirements.txt
docs/developer/: index.rst
docs/user/: index.rst  master.rst  memory.rst
examples/: CMakeLists.txt  hello_mesh.yml
scripts/: README.md  build.sh  build_docs.sh  clean_build.sh  clean_extern.sh  format-all.sh  format_all.sh  mpi_env.sh  postprocess_scaling.py  prefetch_third_party.sh  push_ci.sh  run_mpi_tests.sh  run_perf_tests.sh  run_regression_tests.sh  run_scaling.sh  run_unit_tests.sh
src/: CMakeLists.txt  README.md
src/apps/solver/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  README.md  main.cpp
src/core/include/: AlignedAlloc.hpp  Field.hpp  HaloExchange.hpp  Layout.hpp  MemoryManager.hpp  Mesh.hpp
src/core/include/master/: FieldCatalog.hpp  HaloOps.hpp  Log.hpp  Master.hpp  PluginHost.hpp  Progress.hpp  RunContext.hpp  Scheduler.hpp  Views.hpp
src/core/include/master/io/: AsyncWriter.hpp  CGNSWriter.hpp  ConfigYAML.hpp  IWriter.hpp  NullWriter.hpp  Preflight.hpp  StagingPool.hpp  WritePlan.hpp  WriterConfig.hpp  XdmfHdf5Writer.hpp
src/core/include/master/plugin/: Action.hpp  Program.hpp  Registry.hpp
src/core/include/memory/: AlignedAlloc.hpp  MemoryManager.hpp  MpiBox.hpp
src/core/include/mesh/: Boundary.hpp  Field.hpp  HaloExchange.hpp  Mesh.hpp
src/core/memory/: MemoryManager.cpp
src/core/src/: MemoryManager.cpp
src/core/src/master/: FieldCatalog.cpp  Master.cpp  PluginHost.cpp  Scheduler.cpp
src/core/src/master/io/: AsyncWriter.cpp  CGNSWriter.cpp  Preflight.cpp  StagingPool.cpp  WritePlan.cpp  XdmfHdf5Writer.cpp
src/core/src/master/plugin/: Registry.cpp
src/ipc/: CMakeLists.txt  stub_ipc.cpp
src/kernels/: CMakeLists.txt  stub_kernel.f90
src/numerics/: CMakeLists.txt
src/numerics/include/: MacOps.hpp  kernels.h
src/numerics/kernels/: kernels.f90
src/numerics/src/: MacOps.cpp
src/physics/: CMakeLists.txt
src/physics/fluids/: CMakeLists.txt
src/physics/fluids/include/: ApplyBCs.hpp  InitTG.hpp  MomentumPredictor.hpp  PressurePoisson.hpp  Program.hpp  ProjectionLoop.hpp  SGS.hpp  VelocityCorrector.hpp  kernels_fluids.h
src/physics/fluids/kernels/: fluids.f90
src/physics/fluids/src/: ApplyBCs.cpp  InitTG.cpp  MomentumPredictor.cpp  PressurePoisson.cpp  Program.cpp  ProjectionLoop.cpp  Register.cpp  SGS.cpp  VelocityCorrector.cpp
src/plugins/: CMakeLists.txt
tests/: CMakeLists.txt  README.md
tests/ci_inputs/: CMakeLists.txt  test_dummy.cpp
tests/performance/: CMakeLists.txt  simple_bench.hpp
tests/performance/core/: CMakeLists.txt  bench_allocate.cpp  bench_copy.cpp  bench_index.cpp  bench_io_write.cpp  bench_overhead.cpp  mesh_seams.hpp
tests/performance/physics/fluids/: CMakeLists.txt  bench_diffuse.cpp  bench_diffuse_be.cpp  bench_grad_div_correct.cpp  bench_poisson.cpp  bench_sgs.cpp  test_petsc_guard.hpp
tests/regression/: CMakeLists.txt  check_dims.cpp  check_tgv_decay.cpp
tests/regression/cavity32/: config.yml
tests/regression/tgv128/: config.yml
tests/regression/tgv32/: config.yml
tests/unit/core/: CMakeLists.txt  mesh_seams.cpp  mesh_seams.hpp  test_alignment.cpp  test_async_backpressure.cpp  test_boundary.cpp  test_cgns_roundtrip.cpp  test_config_yaml.cpp  test_copy_roundtrip.cpp  test_device_mirror.cpp  test_field_index.cpp  test_fieldcatalog.cpp  test_fieldcatalog_more.cpp  test_halo.cpp  test_halo_ng2.cpp  test_main_mpi.cpp  test_plugin_register.cpp  test_preflight.cpp  test_registry.cpp  test_registry_error_master.cpp  test_registry_memory.cpp  test_scheduler_calls.cpp  test_scheduler_noop.cpp  test_writeplan_pack.cpp  test_xdmf_roundtrip.cpp
tests/unit/core/gpu/: CMakeLists.txt  test_io_residency.cpp  test_um_fields.cpp
tests/unit/core/mpi/: CMakeLists.txt  mpi_main.cpp  test_boundary_mpi.cpp  test_halo.cpp  test_halo_ng2.cpp  test_io_parallel.cpp  test_scheduler_mpi.cpp
tests/unit/physics/fluids/: CMakeLists.txt  test_correct_velocity.cpp  test_correct_velocity_varrho.cpp  test_diffuse.cpp  test_diffuse_be.cpp  test_divergence_rhie_chow.cpp  test_grad_div.cpp  test_petsc_guard.hpp  test_poisson.cpp  test_poisson_varcoef.cpp  test_program_plan.cpp  test_sgs.cpp
tests/unit/physics/fluids/mpi/: CMakeLists.txt  lin.hpp  mpi_main.cpp  test_poisson_orchestration_mpi.cpp  test_projection_loop_mpi.cpp  test_rbgs_orchestration_mpi.cpp
